test/overlay/nut/nut-4/kustomization.yml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: nut-4

resources:
  - ../../../base
  - allow-namespace-nut-5.yml
  - allow-namespace-nut-6.yml
